--- a/public/template/winery_profile.html
+++ b/public/template/winery_profile.html
@@ -250,6 +250,50 @@
             </div>
             <div class="right">
             	<div class="sidebox">
+                	<div class="title">
+                	  <h3><a name="05" id="05"></a>热门酒庄</h3></div>
+                    <div class="main">
+                    	<ul class="sidewine">
+                        	<li>
+                            	<a href="#"><img src="images/test/wine70_02.jpg" width="70" height="70" alt="wine name" /></a>
+                                <div class="info">
+                                	<h3 class="zh"><a href="wine_profile.html">奥比安酒庄</a></h3>
+                                    <h3 class="en"><a href="#">Chateau Haut-Brion</a></h3>
+                              </div>
+                          </li>
+                            <li>
+                            	<a href="#"><img src="images/test/wine70_03.jpg" width="70" height="70" alt="wine name" /></a>
+                                <div class="info">
+                                	<h3 class="zh"><a href="wine_profile.html">奥比安酒庄</a></h3>
+                                    <h3 class="en"><a href="#">Chateau Haut-Brion</a></h3>
+                              </div>
+                          </li>
+                            <li>
+                            	<a href="#"><img src="images/test/wine70.jpg" width="70" height="70" alt="wine name" /></a>
+                                <div class="info">
+                                	<h3 class="zh"><a href="wine_profile.html">奥比安酒庄</a></h3>
+                                    <h3 class="en"><a href="#">Chateau Haut-Brion</a></h3>
+                              </div>
+                          </li>
+                            <li>
+                            	<a href="#"><img src="images/test/wine70_02.jpg" width="70" height="70" alt="wine name" /></a>
+                                <div class="info">
+                                	<h3 class="zh"><a href="wine_profile.html">奥比安酒庄</a></h3>
+                                    <h3 class="en"><a href="#">Chateau Haut-Brion</a></h3>
+                              </div>
+                            </li>
+                          <li class="last">
+                            	<a href="#"><img src="images/test/wine70.jpg" width="70" height="70" alt="wine name" /></a>
+                              <div class="info">
+                                	<h3 class="zh"><a href="wine_profile.html">奥比安酒庄</a></h3>
+                                    <h3 class="en"><a href="#">Chateau Haut-Brion</a></h3>
+                                 </div>
+                            </li>
+                            <div class="clear"></div>
+                        </ul>
+                    </div>
+                </div>
+                <!--<div class="sidebox">
                 	<div class="title"><h3><a name="05" id="05"></a>热门酒款</h3></div>
                     <div class="main">
                     	<ul class="sidewine">
@@ -291,7 +335,7 @@
                             <div class="clear"></div>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <div class="sidebox">
                 	<div class="title"><h3><a name="06" id="06"></a>关注这个酒庄的人<span class="font12 more"><a href="winery_follower_list.html">(共21人...)</a></span></h3></div>
                     <div class="main">
