--- a/public/template/stylesheets/fancybox.css
+++ b/public/template/stylesheets/fancybox.css
@@ -329,4 +329,4 @@
 #comment_form .new_message  textarea {width:300px;}
 #comment_form .new_message .text_area {padding:5px;}
 .light_nor {padding:10px 20px;}
-li.ui-menu-item {float:none;}
+#comment_form ul li.ui-menu-item {float:none;}
