--- a/app/views/themes/waterfall/photos/new.html.erb
+++ b/app/views/themes/waterfall/photos/new.html.erb
@@ -25,7 +25,7 @@
         
       </p>
       <div class="clear"></div>
-      <p>一次只能上传10张图片, 图片大小为5MB.</p>
+      <p>每次最多上传10张图片；每张图片最大为5MB。</p>
       <!-- The table listing the files available for upload/download -->
       <table class="table table-striped" width="100%" cellpadding="5" cellspacing="5">
         <tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
