--- a/app/views/themes/waterfall/photos/winery_photo_list.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_list.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <div class="right">
-    <%= render "wineries/hot_wine" %>
+    <%= render "wineries/hot_winery" %>
   </div>
   <div class="clear"></div>
 </div>
