--- a/app/views/themes/waterfall/wineries/show.html.erb
+++ b/app/views/themes/waterfall/wineries/show.html.erb
@@ -46,7 +46,7 @@
     </div>
 
     <div class="right">
-      <%= render "hot_wine" %>
+      <%= render "hot_winery" %>
 
        <%= render "wineries/follower" %>
      </div>
