--- a/app/views/themes/waterfall/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/cellar_items/_form.html.erb
@@ -25,8 +25,8 @@
       <%= f.text_field :number, :class => 'text count' %>支
     </div>
     <div class="required">
-      <label><span>*</span>所在地</label>
-      <%= f.select :location, APP_DATA['users']['cellars']['item']['location'].collect{|i| [i, i]} %>
+      <label>所在位置</label>
+      <%= f.text_field :location, :class => 'text' %>
     </div>
     <div class="required">
       <label>购入价格</label>
