--- a/app/views/themes/waterfall/cellars/_show_cellar.html.erb
+++ b/app/views/themes/waterfall/cellars/_show_cellar.html.erb
@@ -13,10 +13,10 @@
             </div>
         <% # TODO: 添加搜索功能  %>
         <div class="sort pt5">
-          排序<select name="order" id="search_order">
-          <% order_hash = { "1" => "购买时间↑", "2" => "购买时间↓", "3" => "年份↑", "4" => "年份↓", "5" => "价格↑", "6" => "价格↓"} %>
+          <select name="order" id="search_order">
+          <% order_hash = { "0" => "排序","1" => "购买时间↑", "2" => "购买时间↓", "3" => "年份↑", "4" => "年份↓", "5" => "价格↑", "6" => "价格↓"} %>
           <% order_hash.each do |key, value| %>
-            <option value="<%= key %>" <%= "selected='selected'" if (!params[:search_order] && key == '1') || (params[:search_order] == key) %>><%= value %></option>
+            <option value="<%= key %>" <%= "selected='selected'" if (!params[:search_order] && key == '0') || (params[:search_order] == key) %>><%= value %></option>
           <% end %>
             </select>
         </div>
@@ -45,7 +45,7 @@
               <% wine_detail = item.wine_detail %>
               <tr>
                 <td class="img">
-                  <%= link_to (wine_label_tag wine_detail, :thumb_name => :thumb, :title => wine_detail.name, :width => 50, :height => 63, :alt => wine_detail.name), wine_path(wine_detail) %>
+                  <%= link_to (wine_label_tag wine_detail, :thumb_name => :thumb, :title => wine_detail.name, :width => 50, :height => 50, :alt => wine_detail.name), wine_path(wine_detail) %>
                 </td>
                 <td class="year">
                   <%= wine_detail.show_year %>
