--- a/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
@@ -69,7 +69,7 @@
     </div>
 
     <div class="right">
-      <%= render "wineries/hot_wine" %>
+      <%= render "wineries/hot_winery" %>
     </div>
 
     <div class="clear"></div>
