--- a/app/views/themes/waterfall/wineries/_follower.html.erb
+++ b/app/views/themes/waterfall/wineries/_follower.html.erb
@@ -3,7 +3,7 @@
     <h3>关注该酒庄的人<span class="font12 more"><%= link_to "(共#{@winery.followers_count}人)" %></span></h3>
   </div>
 
-  <div class=”main“>
+  <div class="main">
     <ul class="follower">
       <%@users.each do |user| %>
           <li>
