--- a/app/views/themes/waterfall/cellars/_show_cellar.html.erb
+++ b/app/views/themes/waterfall/cellars/_show_cellar.html.erb
@@ -66,7 +66,7 @@
                   适饮年限:<%= drinkable(item) %>
                 </td>
                 <td class="count"><%= item.number %></td>
-                <td class="price"><%= number_to_currency(item.price) %></td>
+                <td class="price"><%= number_to_currency(item.price,  :unit => "CNY") %></td>
                 <td class="place"><%= item.location %></td>
                 <% if is_login_user? @user %>
                     <td>
