--- a/app/views/themes/waterfall/wineries/followers_list.html.erb
+++ b/app/views/themes/waterfall/wineries/followers_list.html.erb
@@ -41,7 +41,7 @@
     </div>
     
     <div class="right">
-      <%= render "hot_wine" %>
+      <%= render "hot_winery" %>
     </div>
     
     <div class="clear"></div>
