--- a/app/views/themes/waterfall/wineries/wines_list.html.erb
+++ b/app/views/themes/waterfall/wineries/wines_list.html.erb
@@ -27,7 +27,7 @@
     </div>
     
     <div class="right">
-      <%= render "hot_wine" %>
+     <%= render "hot_winery" %>
     </div>
     
     <div class="clear"></div>
