--- a/app/views/themes/waterfall/users/share/_comments.html.erb
+++ b/app/views/themes/waterfall/users/share/_comments.html.erb
@@ -24,7 +24,7 @@
 <li>
     <div class="pic">
      <%= link_to winery_path(comment.commentable) do %>
-        <%= image_tag comment.commentable.logo_url, :thumb_name => :thumb, :width => 70, :height => 70 %>
+        <%=  winery_label_tag( comment.commentable) %>
       <% end %>
     </div>
       <div class="main">
