--- a/app/views/themes/waterfall/layouts/_user_fragment.html.erb
+++ b/app/views/themes/waterfall/layouts/_user_fragment.html.erb
@@ -3,17 +3,19 @@
 <div id="top_right">
   <ul>
     <li class="userbox">
-      <%= link_to_user current_user,
-      home_index_path,
-      {:class => "userpic", :with_avatar => true, :avatar_version => :thumb, :width => 20, :height => 20 }  %>
-      <%= link_to_image "common/userbox_arrow.jpg", "#", {:class => :arrow_down}, :width => 20, :height => 30 %>
-      <ul class="drop_down_menu" >
-        <li><%= link_to "私信", conversations_path %></li>
-        <li><%= link_to "找朋友", :controller => "/friends", :action => "find" %></li>
-        <li><%= link_to "设置", basic_settings_path() %></li>
-        <li><%= link_to "我的iWine", user_path(current_user) %></li>
-        <li><%= link_to "登出",  logout_path %></li>
-      </ul>
+      <span class="user-select">
+        <%= link_to_user current_user,
+          home_index_path,
+          {:class => "userpic", :with_avatar => true, :avatar_version => :thumb, :width => 20, :height => 20 }  %>
+        <%= link_to_image "common/userbox_arrow.jpg", "#", {:class => :arrow_down}, :width => 20, :height => 30 %>
+        <ul class="drop_down_menu" >
+          <li><%= link_to "私信", conversations_path %></li>
+          <li><%= link_to "找朋友", :controller => "/friends", :action => "find" %></li>
+          <li><%= link_to "设置", basic_settings_path() %></li>
+          <li><%= link_to "我的iWine", user_path(current_user) %></li>
+          <li><%= link_to "登出",  logout_path %></li>
+        </ul>
+      </span>
     </li>
     <%= link_to "添加", "#add_data", :class => [:btn_add, :fancybox] %>
   </ul>
