--- a/app/assets/themes/waterfall/stylesheets/hp.css
+++ b/app/assets/themes/waterfall/stylesheets/hp.css
@@ -4,12 +4,12 @@
 .hp_header {margin:0 0 50px 0;}
 .hp_userimg {float:left;width:130px;margin:0 20px 0 0;}
 .hp_header .hp_right {float:right;}
-.hp_info {float:left;width:550px;position:relative;_line-height:22px;}
+.hp_info {float:left;width:720px;position:relative;_line-height:22px;}
 .hp_info .username {font-size:20px;font-weight:bold;margin:0 0 5px 0;_margin:0;}
 .hp_info .mystatu {margin:0 0 20px 0;color:#666;}
 .hp_info .mystatu span {display:inline-block;margin-left:20px;}
 .hp_info .item {line-height:18px;}
-.hp_info ul.hp_navi{position:absolute; width:550px;top:100px;}
+.hp_info ul.hp_navi{position:absolute; width:720px;top:100px;}
 .hp_navi li {float:left;height:50px;line-height:15px;}
 .hp_navi li a {display:block;height:38px;padding:7px 15px 0 15px;text-align:center;color:#333;float:left;}
 .hp_navi li a:hover {background:url(../images/bg/bg_navi.gif) repeat-x left top;text-decoration:none;}
@@ -66,6 +66,7 @@ ul.photo_list li {display:inline-block;float:left; vertical-align:top; width:190
 ul.photo_list li img {margin:0 0 10px 0;}
 ul.photo_list li .intro, .album_left .photo .intro{margin:0 0 5px 0;}
 .content .album_left {width:590px;float:left;margin:0 28px 0 0;}
+.content .album_left .photo {text-align:center;}
 .content .album_right {width:200px;float:left;padding-left:50px;}
 .album_left .info {border-top:1px solid #ccc;padding:10px 0 0 0;margin:15px 0 40px 0;color:#666;}
 .album_left .photo img {margin:0 0 10px 0;}
