--- a/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
@@ -54,7 +54,7 @@
             <div class="comment">
               <div class="mb20 clearfix">
                 <div class="title">
-                  <%=link_to "#", :class => "btn_gray float_r" do %>
+                  <%=link_to current_user ? '#01' : new_user_session_path, :class => "btn_gray float_r" do %>
                     <span>添加评论</span>
                   <% end %>
                   <h3>评论</h3>
