--- a/public/template/index.html
+++ b/public/template/index.html
@@ -7,6 +7,7 @@
 <link href="stylesheets/hp.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/home.css" rel="stylesheet" type="text/css" />
 <script src="javascripts/input.js" type="text/javascript"></script>
+<script src="javascripts/scrolling.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -311,6 +312,11 @@
             </div>
              <div class="iw_more"><a href="#">去看看他的酒窖</a></div>
       </div>
+      <div class="clear"></div>
+      <div class="loading">
+      	<img src="images/common/loading.gif" alt="loading" width="16" height="16" align="absmiddle" /> <span>更多的内容正在载入中，请稍等...</span>
+      </div>
 </div>
+<div id="gototop" class="indicator"><a href="#header"><img src="images/common/totop.png" width="86" height="39" alt="回到页首" /></a></div>
 </body>
 </html>
