--- a/public/template/cellar_wine_add_detail.html
+++ b/public/template/cellar_wine_add_detail.html
@@ -75,7 +75,7 @@
                 <div class="left">
                    <div class="optional">
                    		<label>酒名</label>
-                       <div class="content">2001拉菲珍宝(Carruade de lafittel)</div>
+                       <div class="content">Carruade de lafittel 拉菲珍宝</div>
                    </div>
                    <div class="optional">
                        <label>年份</label>
