Update Page Title
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @title %>
 <script type="text/javascript" src="http://docs.kissyui.com/kissy/build/kissy.js"></script>
 <style>
   .ks-waterfall{
