--- a/app/views/themes/waterfall/errors/error_404.html.erb
+++ b/app/views/themes/waterfall/errors/error_404.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @title%>
  <div class="errorpage">
 	<%= theme_image_tag "common/404.jpg", :size => "152x137", :alt => "404" %>
 	<p class="mt30">
