--- a/app/views/themes/waterfall/settings/syncs.html.erb
+++ b/app/views/themes/waterfall/settings/syncs.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @title%>
 <%= render "sub_nav", :action => params[:action]  %>
 
 <%  @sns_servers.each_with_index do |server, i| %>
