--- a/app/views/themes/waterfall/albums/new.html.erb
+++ b/app/views/themes/waterfall/albums/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @title%>
 <div class="popup_header">
   <a href="javascript:void(0);" onclick="$.fancybox.close(true);" class="close"></a>
   <h3 class="title"> <%= t :new_album %> </h3>
