--- a/app/views/themes/waterfall/albums/upload_list.html.erb
+++ b/app/views/themes/waterfall/albums/upload_list.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @title%>
 <div class="whitespace">
 <div id="hp" class="min_height" >
 <%= render "users/sub_nav", :action => params[:action] %>
