--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title><%= content_for?(:title) ? content_for(:title) : 'Patrick' %></title>
+    <title>
+      <%= yield_for(:title, "iWine.com") %>
+    </title>
     <%= theme_stylesheet_link_tag    "application" %>
     <%= theme_javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
