--- a/app/views/themes/waterfall/searches/suggestion.html.erb
+++ b/app/views/themes/waterfall/searches/suggestion.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, @title%>
 <p class="title"><a href="#">搜索酒款 》</a></p>
 <div id="search_scroll_wines" class="wineResult">
   <% @words['wines'].each do |wine|%>
