--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -33,7 +33,11 @@
     <div class="globel_navi">
       <%= render "layouts/global_nav" %>
     </div>
-      <% if params[:controller] == "home" || (params[:controller] == "wine_details" && params[:action] == "index") || (params[:controller] == "wineries" && params[:action] == "index")%>
+      <% if params[:controller] == "home" || 
+        (params[:controller] == "wine_details" && params[:action] == "index") || 
+        (params[:controller] == "wineries" && params[:action] == "index") ||
+        (params[:controller] == "static" && params[:action] == "index")
+        %>
       <div id="home">
       <% else %>
       <div id="wrapper950">
