--- a/app/views/themes/waterfall/wineries/index.js.erb
+++ b/app/views/themes/waterfall/wineries/index.js.erb
@@ -4,6 +4,7 @@ $('.pagination').replaceWith('<%= j paginate(@timelines) %>');
 <% else %>
 $('.pagination').remove();
 // TODO: 提示用户已经没有数据可以加载了
+('p.end_waterfall_text_info').html('^_^ 已经到底了...');
 <% end %>
 
  $('#container').masonry( 'reload');
