--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -70,14 +70,7 @@
    </div>
 
    <div class="right">
-     <div class="share">
-       <%= render "share/sns_icons",
-                  :image_url => sns_image_url(@winery, :thumb_name => :middle_x),
-                  :title => sns_title(@winery.name),
-                  :summary => winery_summary(@winery),
-                  :url => request.url %>
-       <div class="clear"></div>
-     </div>
+    <%= render "wineries/score" %>
      <ul class="item">
        <li>
          <p class="pic">
@@ -127,7 +120,16 @@
          </p>
          <p><%= link_to "关注者", followers_list_winery_path(@winery) %></p>
        </li>
+       <div class="clear"></div>
      </ul>
+     <div class="share">
+       <%= render "share/sns_icons",
+                  :image_url => sns_image_url(@winery, :thumb_name => :middle_x),
+                  :title => sns_title(@winery.name),
+                  :summary => winery_summary(@winery),
+                  :url => request.url %>
+       <div class="clear"></div>
+     </div> 
    </div>
    <div class="clear"></div>
 </div>
