--- a/app/views/themes/waterfall/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/cellar_items/_form.html.erb
@@ -2,7 +2,7 @@
 <div class="left">
     <div class="optional">
       <label>酒名</label>
-      <div class="content"><%= @wine_detail.name %></div>
+      <div class="content"><%= @wine_detail.origin_zh_name %></div>
     </div>
     <div class="optional">
       <label>年份</label>
