--- a/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
+++ b/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
@@ -38,7 +38,7 @@
                     <h2>
                       <%= link_to wine_detail.cname, wine_path(wine_detail.id) %>
                     </h2>
-                    <h3><%= link_to wine_detail.ename, wine_path(wine_detail.id) %></h3>
+                    <h3><%= link_to wine_detail.origin_name, wine_path(wine_detail.id) %></h3>
                     <p><%= wine_detail.wine.region_path_zh %></p>
                     <p><%= wine_detail.wine.style.name_zh %></p>
                   </div>
