--- a/app/views/themes/waterfall/home/_timeline.html.erb
+++ b/app/views/themes/waterfall/home/_timeline.html.erb
@@ -13,7 +13,7 @@
 								<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
 							</h1>
               <h2>
-					      <%= raw link_to l.receiverable.ename, wine_path(l.receiverable) %>
+					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
 							</h2>
               <p class="iw_action">有了新评论</p>
           </div>
@@ -55,7 +55,7 @@
 							<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
 						</h1>
             <h2>
-				      <%= raw link_to l.receiverable.ename, wine_path(l.receiverable) %>
+				      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
 						</h2>							
               <p class="iw_action">有人把它加入了酒窖</div>
           <div class="iw_main">
@@ -111,7 +111,7 @@
 								<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
 							</h1>
               <h2>
-					      <%= raw link_to l.receiverable.ename, wine_path(l.receiverable) %>
+					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
 							</h2>
             </div>
             <div class="iw_main">
@@ -160,7 +160,7 @@
 								<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
 							</h1>
               <h2>
-					      <%= raw link_to l.receiverable.ename, wine_path(l.receiverable) %>
+					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
 							</h2>
             </div>
              <div class="iw_more">
