--- a/app/views/themes/waterfall/layouts/_global_nav.html.erb
+++ b/app/views/themes/waterfall/layouts/_global_nav.html.erb
@@ -30,7 +30,7 @@
 					 				</dt>
 					 				<dd>
 					 					<span><%= link_to wine.cname, wine_path(wine) %></span>
-					 					<p><%= link_to wine.ename, wine_path(wine) %></p>
+					 					<p><%= link_to wine.origin_name, wine_path(wine) %></p>
 					 				</dd>
 					 				<div class="clear"></div>
 					 			</dl>
@@ -64,7 +64,7 @@
 					 				</dt>
 					 				<dd>
 					 					<span><%= link_to winery.name_zh, winery_path(winery) %></span>
-					 					<p><%= link_to winery.name_en, winery_path(winery) %></p>
+					 					<p><%= link_to winery.origin_name, winery_path(winery) %></p>
 					 				</dd>
 					 				<div class="clear"></div>
 					 			</dl>
