--- a/app/views/themes/waterfall/searches/winery.html.erb
+++ b/app/views/themes/waterfall/searches/winery.html.erb
@@ -36,7 +36,7 @@
             <%= link_to  winery.name_zh, winery_path(winery)  %>
           </h1>
           <h1 class="en">
-            <%= link_to  winery.name_en, winery_path(winery)  %>
+            <%= link_to  winery.origin_name, winery_path(winery)  %>
           </h1>
           <p class="mt10">
             地区：<%= winery.region_path_zh %>
