--- a/app/views/themes/waterfall/wine_details/_timeline.html.erb
+++ b/app/views/themes/waterfall/wine_details/_timeline.html.erb
@@ -10,7 +10,7 @@
 						<%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
 					</h1>
           <h2>
-			      <%= raw link_to l.secondary_actor.ename, wine_path(l.secondary_actor) %>
+			      <%= raw link_to l.secondary_actor.origin_name, wine_path(l.secondary_actor) %>
 					</h2>
           <p class="iw_action">有了新评论</p>
       </div>
@@ -49,7 +49,7 @@
             <%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
           </h1>
           <h2>
-            <%= raw link_to l.secondary_actor.ename, wine_path(l.secondary_actor) %>
+            <%= raw link_to l.secondary_actor.origin_name, wine_path(l.secondary_actor) %>
           </h2>
           <p class="iw_action">这支酒被关注.</p>
       </div>
@@ -88,7 +88,7 @@
 					<%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
 				</h1>
         <h2>
-		      <%= raw link_to l.secondary_actor.ename, wine_path(l.secondary_actor) %>
+		      <%= raw link_to l.secondary_actor.origin_name, wine_path(l.secondary_actor) %>
 				</h2>							
           <p class="iw_action">有人把它加入了酒窖</div>
       <div class="iw_main">
