--- a/app/views/themes/waterfall/wine_details/show.html.erb
+++ b/app/views/themes/waterfall/wine_details/show.html.erb
@@ -11,7 +11,7 @@
 <div id="wp_left">
   <div class="wp_space_line">
     <h1 class="wine_name_ch"><%= raw @wine_detail.cname %></h1>
-    <h1 class="wine_name_en"><%= raw @wine_detail.ename %></h1>
+    <h1 class="wine_name_en"><%= raw @wine_detail.origin_name %></h1>
   </div>
   <div class="wp_space_line ptb10">
     <%= render "wine_details/share/buttons" %>
