--- a/app/views/themes/waterfall/wineries/_hot_winery.html.erb
+++ b/app/views/themes/waterfall/wineries/_hot_winery.html.erb
@@ -8,7 +8,7 @@
                 <%= winery_label_tag winery, :thumb_name => :thumb_x, :width => 70, :height => 70 %>
                 <div class="info">
                   <h3 class="zh"><%= link_to winery.name_zh, winery_path(winery) %></h3>
-                  <h3 class="en"><%= link_to winery.name_en, winery_path(winery) %></h3>
+                  <h3 class="en"><%= link_to winery.origin_name, winery_path(winery) %></h3>
                 </div>
             <% end %>
           </li>
