--- a/app/views/themes/waterfall/wineries/_timeline.html.erb
+++ b/app/views/themes/waterfall/wineries/_timeline.html.erb
@@ -10,7 +10,7 @@
     <%= raw link_to l.secondary_actor.name_zh, winery_path(l.secondary_actor) %>
   </h1>
   <h2>
-   <%= raw link_to l.secondary_actor.name_en, winery_path(l.secondary_actor) %>
+   <%= raw link_to l.secondary_actor.origin_name, winery_path(l.secondary_actor) %>
  </h2>
  <p class="iw_action">有了新评论</p>
 </div>
