--- a/app/views/mine/cellar_items/add_step_two.html.erb
+++ b/app/views/mine/cellar_items/add_step_two.html.erb
@@ -32,7 +32,7 @@
                   <div class="wine_img"><%= wine_cover_tag( wine_detail, :thumb_name => "thumb", :width => "50", :height => "63" ) %></div>
                   <div class="wine_info">
                     <h2><a href="wine_profile.html"><%= wine_detail.cname %></a></h2>
-                    <h3><%= wine_detail.ename %></h3>
+                    <h3><%= wine_detail.origin_name %></h3>
                     <p><%= wine_detail.wine.region_path_zh %></p>
                     <p><%= wine_detail.wine.style.name_zh %></p>
                   </div>
