--- a/app/views/themes/waterfall/cellars/_show_cellar.html.erb
+++ b/app/views/themes/waterfall/cellars/_show_cellar.html.erb
@@ -52,7 +52,7 @@
                 </td>
                 <td class="des">
                   <%= wine_detail.wine.name_zh %><br/>
-                  <%= wine_detail.wine.name_en %><br/>
+                  <%= wine_detail.wine.origin_name %><br/>
                   <%= wine_detail.wine.region_path_zh %><br/>
                   <% if wine_detail.wine.winery %>
                     <%= wine_detail.wine.winery.name_zh %><br/>
