--- a/app/views/themes/waterfall/share/_region_tree.html.erb
+++ b/app/views/themes/waterfall/share/_region_tree.html.erb
@@ -1,3 +1,3 @@
-<%= raw region_tree.collect {|r| link_to r.name_zh + '/' + r.name_en , results_searches_path(:tab => :wine, :word => r.name_en) }.join(" < ")  %>
+<%= raw region_tree.collect {|r| link_to r.name_zh + '/' + r.origin_name , results_searches_path(:tab => :wine, :word => r.name_en) }.join(" < ")  %>
 
 
