--- a/app/views/themes/waterfall/users/share/_most_wine_follows.html.erb
+++ b/app/views/themes/waterfall/users/share/_most_wine_follows.html.erb
@@ -9,7 +9,7 @@
       <%= link_to wine.cname, wine_path(wine) %>
     </h3>
     <h3 class="en">
-      <%= link_to wine.ename, wine_path(wine) %>
+      <%= link_to wine.origin_name, wine_path(wine) %>
     </h3> 
     </div>     
   </li>
