--- a/app/views/themes/waterfall/users/share/_wine_follows.html.erb
+++ b/app/views/themes/waterfall/users/share/_wine_follows.html.erb
@@ -10,7 +10,7 @@
         <%= link_to comment.commentable.cname, wine_path(comment.commentable.id) %>
       </h3>
       <h3 class="en">
-        <%= link_to comment.commentable.ename, wine_path(comment.commentable.id) %>
+        <%= link_to comment.commentable.origin_name, wine_path(comment.commentable.id) %>
       </h3>      
     </div>
     <div class="clear"></div>
