--- a/app/views/themes/waterfall/wineries/_wine.html.erb
+++ b/app/views/themes/waterfall/wineries/_wine.html.erb
@@ -5,7 +5,7 @@
   <% end %>
   <div class="info">
     <h3 class="zh"><%= link_to wine.name_zh, wine_path(releast_detail) %></h3>
-    <h3 class="en"><%= link_to wine.name_en, wine_path(releast_detail) %></h3>
+    <h3 class="en"><%= link_to wine.origin_name, wine_path(releast_detail) %></h3>
     <p><strong>年份：</strong></p>
     <p class="year">
       <% wine.details.order("year desc").each do |detail| %>
