--- a/public/template/album_photo_list.html
+++ b/public/template/album_photo_list.html
@@ -41,9 +41,9 @@
     <div class="whitespace">
     <div id="hp">
           <div class="hp_header">
-            <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
             <div class="hp_userimg"><a href="#"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
+                <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
                 <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
@@ -71,77 +71,75 @@
       <ul class="photo_list">
        	<li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
-        <li class="photo_des"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
-          <p>标题</p>
-          <p><input class="text photo_name" name="" type="text" /></p>
-          <p>描述</p>
-          <p><textarea class="photo_des" name="" cols="" rows=""></textarea></p>
-          <p>
-            <label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
+        <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
+          <p class="name">鲔鱼莎拉</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
+          <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
+          10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <li class="last"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <div class="clear"></div>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <li class="last"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <div class="clear"></div>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <li> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
         <li class="last"> <a href="album_photo_detail.html"><img class="cover" src="images/test/pic190_1.jpg" width="191" height="128" alt="cover" /></a>
           <p class="name">鲔鱼莎拉</p>
-          <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
+          <p><label><input class="radio" name="社会封面" type="radio" /> 设为封面</label></p>
           <p class="info">2012-1-28 上传 | <a href="#">删除</a><br/>
           10浏览 | 5评论</p>
         </li>
